<resources>
    <string name="app_name">BillBoard</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bill Watcher</string>
    <string name="nav_header_subtitle">User placeholder </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_list">All Bills</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bill_title_hint">"Electric"</string>
    <string name="bill_title_label">Bill Name</string>
    <string name="bill_details_label">Price</string>
    <string name="date_picker_title">Date of bill:</string>
    <string name="new_bill">New bill</string>
    <string name="delete_bill">Delete bill</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d bills</string>
    <string name="report_bills_text">Report bills</string>
    <string name="share_bill_text">Share this bill</string>
    <string name="bill_report">%1$s! The bill was added on %2$s. %3$s, and %4$s</string>
    <string name="bill_report_subject">Bill Alert</string>
    <string name="send_report">Share this bill via</string>
    <!--    <string name="bill_title">Bill Title</string>-->
    <string name="bill_date">Bill Date</string>
    <!--    <string name="view_prices_text">View Bill List</string>-->
    <string name="bill_amount_hint">0.00</string>
    <string name="submit_bill">Submit Bill</string>
    <string name="edit_bill_text">Confirm edit</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_question">Are you sure you want to delete this bill?"</string>
    <string name="dollar_sign">$</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_bill">Add Bill</string>
    <string name="price_sort">PRICE SORT TEMP</string>
    <string name="default_order">DEFAULT ORDER TEMP</string>
</resources>
