<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bill_title_label" />

            <EditText
                android:id="@+id/price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bill_title_hint"
                android:inputType="text"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_details_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dollar_sign"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_amount_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/price_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/price_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_bill_text"
        />

</LinearLayout>