<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_new_bill"
    android:layout_margin="0dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bill_title_label" />

            <EditText
                android:id="@+id/price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bill_title_hint"
                android:inputType="text" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_details_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dollar_sign"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_amount_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>


    <Button
        android:id="@+id/price_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />


    <Button
        android:id="@+id/price_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_bill" />

</LinearLayout>